# ImageCopy

./: .gitignore  .pylintrc  ActionRunner.py  ExifEditing.py  GroupingTransform.py  ImageFinder.py  PathTransform.py  README.md  RawSeparateTransform.py  TransformRunner.py  config.example.yml  config.py  config.yml  grouper.py  image_copier.py  image_copy.py  image_file.py  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: pyinstaller-build-workflow.yml  python-app.yml
ImageCopy/: ActionRunner.py  AfterCopyAction.py  Config.py  ExifEditing.py  GroupingTransform.py  ImageFile.py  ImageFinder.py  RawSeparateTransform.py  __main__.py  action_runner.py  config.example.yml  config.py  copier.py  image_copier.py  image_copy.py  image_file.py  image_finder.py
ImageCopy/Actions/: AfterCopyAction.py  AutoGreyscale.py  ExifEditing.py  GreyscaleConverter.py  after_copy_action.py  auto_greyscale.py  exif_editing.py  greyscale_converter.py
ImageCopy/Transformers/: GroupingTransform.py  PathTransform.py  RawSeparateTransform.py  RenameTransform.py  grouping_transform.py  path_transform.py  raw_separate_transform.py  rename_transform.py
docs/source/: actions.rst  conf.py  index.rst  main.rst  overview.rst  transformers.rst
tests/: RawSeparateTransformTest.py  test_Copier.py  test_GroupingTransform.py  test_RawSeparateTransform.py  test_action_runner.py  test_grouping_transform.py  test_raw_separate_transform.py  test_rename_transform.py
tests/mock/: mocks.py
