[metadata]
name = image-copy
version = 2.1.1
author = Lukas Panni
author_email = lukas@lukaspanni.de
description = Easy and fast image copying
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukaspanni/ImageCopy
project_urls =
    Issues = https://github.com/lukaspanni/ImageCopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ImageCopy
packages = find:
python_requires = >=3.6

install_requires = 
    piexif==1.1.3
    PyYAML==6.0
    pytest==6.2.5
    Pillow>=8.1.1
    numba==0.53.1
    numpy==1.21.3


[options.packages.find]
where = ImageCopy